--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    Hello world!
+    Hello world! weewoo
     <script src="index.js"></script>
   </body>
 </html>
