--- a/about.html
+++ b/about.html
@@ -9,21 +9,33 @@
   </head>
   <body>
     <div>
-      <a href="#" class="disabled">Home</a>
-      <a href="about.html">About Me</a>
+      <a href="home.html">Home</a>
+      <a href="#" class="disabled">About Me</a>
       <a href="experience.html">Experience</a>
       <a href="contact.html">Contact</a>
     </div>
 
     <div>
-      <h1>Akul Joshi</h1>
-      <img width="250" height="300" src="me.jpeg" />
-      <p>
-        Hello! My name is Akul Joshi. I am currently a sophomore at the
-        University of Illinois at Urbana-Champiagn. I love getting my hands on
-        new projects; I love trying to make anything!
-      </p>
+      <h1>About Me</h1>
+      <div>
+        <p>My Interests</p>
+        <ul>
+          <li>Music</li>
+          <li>Technology</li>
+          <li>Food</li>
+        </ul>
+      </div>
+
+      <div>
+        <p>My Hobbies</p>
+        <ol>
+          <li>Coding</li>
+          <li>Playing Guitar</li>
+          <li>Cooking</li>
+        </ol>
+      </div>
     </div>
+
     <script src="index.js"></script>
   </body>
 </html>
