--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div>
+    <div class="navbar">
       <a href="home.html">Home</a>
       <a href="#" class="disabled">About Me</a>
       <a href="experience.html">Experience</a>
@@ -16,8 +16,8 @@
     </div>
 
     <div>
-      <h1>About Me</h1>
-      <div>
+      <h1 class="header">About Me</h1>
+      <div class="left-box">
         <p>My Interests</p>
         <ul>
           <li>Music</li>
@@ -26,7 +26,7 @@
         </ul>
       </div>
 
-      <div>
+      <div class="right-box">
         <p>My Hobbies</p>
         <ol>
           <li>Coding</li>
