--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div>
+    <div class="navbar">
       <a href="#" class="disabled">Home</a>
       <a href="about.html">About Me</a>
       <a href="experience.html">Experience</a>
       <a href="contact.html">Contact</a>
     </div>
 
-    <div>
+    <div class="header">
       <h1>Akul Joshi</h1>
-      <img width="250" height="300" src="me.jpeg" />
-      <p>
+      <img class="profile-img" src="me.jpeg" />
+      <p class="description">
         Hello! My name is Akul Joshi. I am currently a sophomore at the
         University of Illinois at Urbana-Champiagn. I love getting my hands on
         new projects; I love trying to make anything!
