--- a/experience.html
+++ b/experience.html
@@ -8,7 +8,7 @@
     <link href="index.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div>
+    <div class="navbar">
       <a href="home.html">Home</a>
       <a href="about.html">About Me</a>
       <a href="#" class="disabled">Experience</a>
