--- a/experience.html
+++ b/experience.html
@@ -15,18 +15,19 @@
       <a href="contact.html">Contact</a>
     </div>
 
-    <h2>Experience</h2>
-    <button class="accordian">Experience 1</button>
+    <h2 class="header">Experience</h2>
+    <button class="accordion">Experience 1</button>
     <div class="panel">
       "Internship here"
     </div>
-    <button class="accordian">Experience 2</button>
+    <button class="accordion">Experience 2</button>
     <div class="panel">
       "Internship here"
     </div>
-    <button class="accordian">Experience 3</button>
+    <button class="accordion">Experience 3</button>
     <div class="panel">
       "Internship here"
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
