--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="#" class="disabled">About Me</a>
       <a href="experience.html">Experience</a>
       <a href="contact.html">Contact</a>
