--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
       <a href="experience.html">Experience</a>
       <a href="#" class="disabled">Contact</a>
