--- a/experience.html
+++ b/experience.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="navbar">
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="about.html">About Me</a>
       <a href="#" class="disabled">Experience</a>
       <a href="contact.html">Contact</a>
